[package]
name = "actix-mongodb"
version = "0.1.0"
authors = ["Frederick Zhang <frederick888@tsundere.moe>"]
edition = "2018"

[dependencies]
actix-web = "1.0.7"
mongodb = { version = "0.4.0", features = ["ssl"] }
dotenv = "0.14.1"
failure = "0.1.5"
serde_json = "1.0.40"
env_logger = "0.7.0"
once_cell = "1.2.0"
log = "0.4.8"
